...
  const detailTextStyle = [styles.detail, { color: theme.textColor }]

  return (
    <Pressable
      style={styles.pressableContainer}
      onPress={onContainerPress}
      testID="user-sneak-peek-container"
    >
      <AnimatedBlurView
        style={[StyleSheet.absoluteFill, blurViewAnimatedStyle]}
        blurType={colorScheme === 'dark' ? 'dark' : 'light'}
        blurAmount={5}
        reducedTransparencyFallbackColor={theme.backgroundColor}
      />
      {!!user && (
        <Animated.View
          style={sneakPeekContainerStyle}
          // block the container's closing behavior on tap
          onStartShouldSetResponder={() => true}
          testID="user-sneak-peek-card"
        >
          <Text style={[styles.fullName, { color: theme.textColor }]}>
            {getUserFullNameText(user.name)}
          </Text>
          <Text style={[detailTextStyle, styles.gender]}>{user.gender}</Text>
          <Text style={detailTextStyle}>{user.email}</Text>
...
