...
  const theme = useTheme()

  return (
    <TouchableHighlight
      underlayColor={theme.cardBackgroundColor}
      onLongPress={() => setSneakPeekUser(user)}
      testID={'list-item'}
    >
      <View style={styles.container}>
        <Image style={styles.avatar} source={{ uri: user.picture.thumbnail }} />
        <View style={styles.textsContainer}>
          <Text
            style={[styles.name, { color: theme.textColor }]}
...
