...
        ItemSeparatorComponent={ItemSeperator}
        getItemLayout={getUserItemLayout}
      />

      {(initialLoading || loadingMore) && (
        <ActivityIndicator
          testID="loading-indicator"
          style={
            initialLoading
              ? // shows up on centre of the screen
                StyleSheet.absoluteFill
              : [
                  // shows up at the bottom
...
